--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^22.19.1",
     "chai": "^5.3.3",
     "ethers": "^6.15.0",
+    "fast-check": "^4.4.0",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
     "hardhat": "^3.0.15",
     "mocha": "^11.7.5",
